[package]
name = "honeybadger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crabquery = "0.1.8"
getopts = "0.2"
reqwest = {version= "0.11.7", features = ["blocking"]}
rand = "0.8.4"
sha2 = "0.10.0"
hex = "0.4.3"
url = "2"
io = "0.0.2"